# esp32s3_openmv_lvgl

./: .gitmodules  LICENSE  README.md
project/ksdiy/: .gitignore  CMakeLists.txt  Makefile  mpconfigport.h  partitions_8M.csv
project/ksdiy/boards/: sdkconfig.240mhz_s3  sdkconfig.base_s3  sdkconfig.freertos  sdkconfig.lvgl  sdkconfig.oct_lvgl_DEVKIT  sdkconfig.oct_lvgl_ksdiy  sdkconfig.oct_spiram_s3  sdkconfig.oct_spiram_s3_DEVKIT  sdkconfig.spiram_s3  sdkconfig.usb
project/ksdiy/boards/GENERIC_S3/: mpconfigboard.cmake  mpconfigboard.h
project/ksdiy/components/esp32-camera/driver/: esp_camera.c
project/ksdiy/components/esp32-camera/sensors/: ov7670.c  ov7725.c
project/ksdiy/components/lv_bindings/: mkrules.cmake
project/ksdiy/components/lv_examples/: CMakeLists.txt  Kconfig  lv_demo_conf.h
project/ksdiy/components/lvgl_esp32_drivers/: lvgl_helpers.c  lvgl_helpers.h  lvgl_spi_conf.h
project/ksdiy/components/lvgl_esp32_drivers/lvgl_tft/: st7789.c  st7789.h
project/ksdiy/components/lvgl_esp32_drivers/lvgl_touch/: ft6x36.c  ft6x36.h  gt615.c  gt615.h  ns2016.c  ns2016.h  tp_i2c.c
project/ksdiy/main/: CMakeLists.txt  copy_leftmodules.sh  idf_component.yml
project/ksdiy/modules/: _boot.py  display_driver_utils.py  esp_start.py  ili9XXX.py  inisetup.py  main.py  system.py  uservo.py  xpt2046.py
project/ksdiy/omv/: arm_math.h  omv.cmake
project/ksdiy/omv/alloc/: fb_alloc.c  fb_alloc.h  umm_malloc.c  unaligned_memcpy.c
project/ksdiy/omv/boards/esp32s/: imlib_config.h  omv_boardconfig.h
project/ksdiy/omv/common/: ff_wrapper.c  omv_sensor.h  trace.c  usbdbg.c  usbdbg.h
project/ksdiy/omv/imlib/: apriltag.c  clahe.c  dmtx.c  fft.c  framebuffer.c  hough.c  imlib.c  imlib.h  jpeg.c  line.c  lsd.c  mathop.c  qrcode.c  stats.c
project/ksdiy/omv/modules/: py_fir.c  py_gif.c  py_image.c  py_imageio.c  py_sensor.c
project/ksdiy/omv/ports/esp32s/: cambus.c  esp32_sensors.c  esp32_wifidbg.c  sensor.c
project/ksdiy/omv/ports/nrf/: sensor.c
project/ksdiy/omv/ports/stm32/: sensor.c
project/ksdiy/src/: firmware_version.c  firmware_version.h  main.c  pyexec.c  pyexec.h  test_esp32lvgl.c
project/ksdiy/src/adapter/: machine_adc.c  machine_hw_spi.c  machine_pin.c  machine_sdcard.c  machine_timer.c  modesp.c  modmachine.c  modutime.c  mphalport.c  mphalport.h  mpthreadport.c  uart.c  uart.h  usb.c
project/ksdiy/src/driver/: drv_9_sensor.c  drv_9_sensor.h  drv_aw9523b.c  drv_aw9523b.h  drv_button.c  drv_button.h  drv_hub.c  drv_hub.h  drv_i2c.c  drv_i2c.h  drv_motor.c  drv_motor.h  drv_nvs.c  drv_nvs.h  drv_qmc6310.c  drv_qmc6310.h  drv_qmi8658.c  drv_qmi8658.h  drv_rgb_led.c  drv_rgb_led.h  drv_ring_buf.c  drv_ring_buf.h  uart1.c  uart1.h
project/ksdiy/src/lcd/: who_lcd.c  who_lcd.h
project/ksdiy/src/lvgl_mlab/: mkrules.cmake
project/ksdiy/src/lvgl_mlab/inc/: espidf.h  lv_conf.h
project/ksdiy/src/lvgl_mlab/srcs/: espidf.c
project/ksdiy/src/micropython-modules/: micropython.cmake
project/ksdiy/src/micropython-modules/audio_frontend/: .gitignore  audio_frontend_module.c  micropython.cmake  micropython.mk
project/ksdiy/src/micropython-modules/microlite/: micropython-error-reporter.cpp  micropython-error-reporter.h  micropython.cmake  micropython.mk  openmv-libtf.cpp  openmv-libtf.h  tensorflow-microlite.c  tensorflow-microlite.h
project/ksdiy/src/mpy_modules/: helloword.c  mod_hub.c  mod_motor.c  mod_rgb_led.c  mod_sensor.c  modmatatalab.c  module_config.h
project/ksdiy/src/mpy_modules/system/: home_key.c  home_key.h  system_management.c  system_management.h
project/ksdiy/src/omv_mlab/: omv.cmake
project/ksdiy/src/omv_mlab/board_esp32s/: imlib_config.h  omv_boardconfig.h
project/ksdiy/src/omv_mlab/inc/: imlib.h  libtf.h  omv_sensor.h  usbdbg.h
project/ksdiy/src/omv_mlab/port_esp32s/: esp32_sensors.c  sensor.c
project/ksdiy/src/omv_mlab/srcs/: fb_alloc.c  fmath.c  framebuffer.c  py_image.c  py_lcd.c  py_lcd0818.c  py_sensor.c  rgb_table.c  unaligned_memcpy.c  usbdbg.c
project/ksdiy/src/usb/: cdc_acm_cherryusb.c  ksdiy_usb_cdc.h  usb_cdc.c  usb_cdc.h
project/ksdiy/src/usb_cherry/addition/: usb_cherry_platform.c
project/ksdiy/src/usb_cherry/include/: usb_config.h
submodule/micropython/: .gitmodules
submodule/micropython/docs/: conf.py  index.rst  license.rst  make.bat
submodule/micropython/docs/openmvcam/: quickref.rst
submodule/micropython/docs/openmvcam/tutorial/: hardware_setup.rst  io_tutorial.rst  openmvide_overview.rst
submodule/micropython/docs/reference/: asm_thumb2_index.rst  filesystem.rst  speed_python.rst
submodule/micropython/docs/templates/: topindex.html
submodule/micropython/drivers/cyw43/: cyw43_lwip.c
submodule/micropython/drivers/memory/: spiflash.c
submodule/micropython/extmod/: network_cyw43.c  vfs_fat.c  vfs_fat.h  vfs_fat_diskio.c  vfs_fat_file.c
submodule/micropython/extmod/nimble/: nimble.mk
submodule/micropython/extmod/uasyncio/: core.py
submodule/micropython/lib/asf4/: .gitignore  README.md
submodule/micropython/lib/libm/: math.c
submodule/micropython/lib/nxp_driver/: README.md
submodule/micropython/lib/oofatfs/: ffconf.h
submodule/micropython/lib/stm32lib/: README.md
submodule/micropython/ports/esp32/: machine_pin.c
submodule/micropython/ports/nrf/: Makefile  gccollect.c  mpconfigport.h  pendsv.c  pendsv.h
submodule/micropython/ports/rp2/: CMakeLists.txt  Makefile  modrp2.c  modutime.c  mpconfigport.h  mphalport.c  mphalport.h  pendsv.c  pendsv.h  tusb_config.h  tusb_port.c
submodule/micropython/ports/stm32/: Makefile  dac.c  dma.c  dma.h  factoryreset.c  flashbdev.c  i2c.h  irq.h  led.c  led.h  modpyb.c  modutime.c  mpconfigboard_common.h  mpconfigport.h  mphalport.c  openmv.inf_template  pendsv.c  pendsv.h  pin_defs_stm32.h  powerctrl.c  pyb_can.c  pyb_i2c.c  pyb_spi.c  qspi.c  rng.c  rng.h  sdcard.c  sdio.c  sdram.c  sdram.h  servo.c  spi.c  spi.h  stm32_it.c  stm32_it.h  systick.c  systick.h  timer.c  timer.h  usb.c  (+4 more)
submodule/micropython/py/: makeversionhdr.py  mkrules.cmake  mpconfig.h  nlr.h  py.cmake  py.mk
submodule/micropython/shared/runtime/: gchelper_native.c
(+280 files in other folders)
